# scanner-i

./: .gitignore  README.md  config.json  pyproject.toml  readmegen.py
src/: __init__.py  config.json  orchestrator.py
src/analyzer/: base.py  context.py  groq_client.py  ollama_client.py  parser.py  prompts.py  router.py
src/cli/: index.py
src/scanner/: assembler.py  ast_extractor.py  ast_loader.py  ast_queries.py  filter.py  parser.py  walker.py
src/templates/: detailed.md  minimal.md  professional.md  standard.md
src/utils/: config.py
src/writer/: sections.py  template.py  writer.py
templates/: detailed.md  minimal.md
